--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <select name="pets" id="pet-select">
                 <option value="0">すべて</option>
                 <option value="1">取得済み</option>
+                <option value="2">未所持</option>
               </select>
             </div>
           </div>
@@ -54,6 +55,7 @@
               <select name="pets" id="pet-select">
                 <option value="0">すべて</option>
                 <option value="1">取得済み</option>
+                <option value="1">未所持</option>
               </select>
             </div>
           </div>
